fix testing issues concerning access